fixed header alignment with columns in nested maintables

--- a/src/touchpoint-ui/Components/Display/DisplaySupport/MainTableRow.css
+++ b/src/touchpoint-ui/Components/Display/DisplaySupport/MainTableRow.css
@@ -126,6 +126,10 @@
 	z-index: 0;
 }
 
+.MainTableRow .componentWrapper .theadBar span:first-child{
+	padding-left: 1px;
+}
+
 .MainTableRow .componentWrapper .mainSection{
 	padding-top: 5px;
 }
